--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="app.js"></script>.
 </head>
 <body>
+    <div id="particles-js"></div>
     <div class="container">
         <h1>Menopausa Calc</h1>
         <label for="idadePrimeiraMenstruacao">Idade da Primeira Menstruação:</label>
