--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Menopausa Calculadora."> 
+    <meta name="keywords" content="calculadora, menopausa"> 
+    <meta name="author" content="Elania Bessa">
     <title>Calculadora de Menopausa</title>
     <link rel="stylesheet" href="style.css">
     <script src="app.js"></script>.
